--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>pagina home</h1>
-    <a href="Valor de vendas"> R$ 5.000,00</a>
+    <p href="Valor de vendas"> R$ 5.000,00</p>
+    <a1 href="Valor do desconto"> Desconto R$ 1.000,00</a1>
 </body><a href="vendas.html">ir para a pagina de vendas</a>
 
